<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup"
    android:background="@color/green">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="225dp"
        android:layout_height="46dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/black"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.028" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="225dp"
        android:layout_height="46dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/black"
        android:ems="10"
        android:hint="@string/nome_de_utilizador"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="225dp"
        android:layout_height="46dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/black"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="225dp"
        android:layout_height="46dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/black"
        android:ems="10"
        android:hint="@string/confirmar_password"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:backgroundTint="@color/yellow"
        android:text="@string/registar"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4" />


</androidx.constraintlayout.widget.ConstraintLayout>