<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="@color/green">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="225dp"
        android:layout_height="46dp"
        android:layout_marginTop="68dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.075"
        android:backgroundTint="@color/black"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"/>

    <EditText
        android:id="@+id/txtUsername"
        android:layout_width="225dp"
        android:layout_height="46dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
        android:backgroundTint="@color/black"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"/>

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:backgroundTint="@color/yellow"
        android:text="@string/registar"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUsername" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:backgroundTint="@color/yellow"
        android:text="@string/entrar"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.80"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUsername" />
</androidx.constraintlayout.widget.ConstraintLayout>